[gd_scene load_steps=5 format=2]

[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=2]
[ext_resource path="res://cards/avatar/Likedino.png" type="Texture2D" id=3]
[ext_resource path="res://images/Menu_interface/credits.png" type="Texture2D" id=4]
[ext_resource path="res://mocraClassic/notifications/cards/preset.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1420.0
offset_bottom = -880.0
custom_minimum_size = Vector2( 500, 200 )
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="cardIcon" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 200.0
offset_bottom = 201.0
texture = ExtResource( 3 )

[node name="numberLabel" type="Label" parent="."]
offset_left = 236.0
offset_top = 1.0
offset_right = 407.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
text = "x250"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 418.0
offset_top = 104.0
offset_right = 518.0
offset_bottom = 204.0
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="amountLabel" type="Label" parent="."]
offset_left = 200.0
offset_top = 86.0
offset_right = 415.0
offset_bottom = 171.0
text = "50000"
